# itomp_nlp

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: .gitignore
include/itomp_nlp/crf/: crf.h  crf_cost_functions_node.h  crf_examples.h  crf_factor.h  crf_factor_manager.h  crf_grounding_cost_functions_factor.h  crf_grounding_node.h  crf_groundings_factor.h  crf_node.h  crf_phrase_grounding_factor.h  crf_phrase_node.h
include/itomp_nlp/interface/: itomp_cost_function_widget.h  itomp_cost_functions_widget.h  itomp_datagen_widget.h  itomp_interface.h  itomp_nlp_widget.h  main_window.h
include/itomp_nlp/kinect/: kf_human_motion_prediction.h  kinect.h  kinect_device.h
include/itomp_nlp/network/: finger_publisher.h  finger_subscriber.h  speech_subscriber.h  trajectory_publisher.h  trajectory_subscriber.h
include/itomp_nlp/nlp/: commands_to_cost.h  crf.h  crf_cost_functions_node.h  crf_factor.h  crf_grounding_node.h  crf_phrase_node.h  glove_pretrained_loader.h  word_to_vector.h
include/itomp_nlp/optimization/: collision_cost.h  cost.h  dynamic_kf_human_obstacle.h  goal_cost.h  goal_orientation_cost.h  goal_region_cost.h  goal_upvector_cost.h  grasp_cost.h  optimizer.h  optimizer_robot.h  optimizer_robot_loader.h  optimizer_thread.h  repulsive_cost.h  scene.h  smoothness_cost.h  static_obstacle.h  trajectory.h  trajectory_publisher_thread.h  velocity_cost.h
include/itomp_nlp/optimization(old)/: cost.h  dynamic_obstacle.h  goal_region_cost.h  optimizer.h  scene.h
include/itomp_nlp/parsetree/: parsetree_node.h  sentence_to_parsetree.h
include/itomp_nlp/renderer/: camera.h  color_shader.h  entity.h  gl_base.h  light.h  light_oit_shader.h  light_shader.h  light_shadow_shader.h  loader.h  material.h  normal_shader.h  object.h  oit_resolve_shader.h  raw_model.h  renderer.h  renderer_interface.h  rendering_box.h  rendering_capsule.h  rendering_human.h  rendering_kinect_human.h  rendering_kinect_points.h  rendering_mesh.h  rendering_mesh_manager.h  rendering_plane.h  rendering_robot.h  rendering_robot_trajectory.h  rendering_shape.h  resource_manager.h  robot_renderer.h  shader_program.h  shadowmap_point_shader.h  shadowmap_shader.h  static_shader.h  texture.h  textured_model.h  wireframe_shader.h
include/itomp_nlp/robot/: continuous_joint.h  fixed_joint.h  joint.h  link.h  prismatic_joint.h  revolute_joint.h  robot_model.h  robot_state.h  urdf_parser.h
include/itomp_nlp/ros/: fetch.h
include/itomp_nlp/shape/: aabb.h  capsule.h  capsule2.h  mesh.h  mesh_loader.h  obb.h  rigid_body.h  shape.h
include/itomp_nlp/utils/: conversion.h  timing.h
include/renderer/: camera.h  entity.h  gl_base.h  light.h  light_shader.h  loader.h  model_texture.h  renderer.h  renderer_interface.h  renderer_object.h  shader_program.h  static_shader.h  textured_model.h
shader/: build_lists.frag  build_lists.vert  color.frag  color.vert  light.frag  light.vert  light_oit.frag  light_shadow.frag  light_shadow.vert  line.frag  line.vert  mesh.frag  mesh.vert  normal.frag  normal.geom  normal.vert  resolve_lists.frag  shadowmap.frag  shadowmap.vert  shadowmap_point.frag  shadowmap_point.geom  shadowmap_point.vert  static.frag  static.vert  wireframe.frag  wireframe.geom  wireframe.vert
src/: .gitignore
src/crf/: crf.cpp  crf_cost_functions_node.cpp  crf_examples.cpp  crf_factor.cpp  crf_factor_manager.cpp  crf_grounding_cost_functions_factor.cpp  crf_grounding_node.cpp  crf_groundings_factor.cpp  crf_node.cpp  crf_phrase_grounding_factor.cpp  crf_phrase_node.cpp
src/interface/: itomp_cost_function_widget.cpp  itomp_cost_functions_widget.cpp  itomp_datagen_widget.cpp  itomp_interface.cpp  itomp_nlp_widget.cpp  main_window.cpp
src/kinect/: kf_human_motion_prediction.cpp  kinect.cpp  kinect_device.cpp
src/network/: finger_publisher.cpp  finger_subscriber.cpp  speech_subscriber.cpp  trajectory_publisher.cpp  trajectory_subscriber.cpp
src/nlp/: commands_to_cost.cpp  crf.cpp  crf_cost_functions_node.cpp  crf_factor.cpp  crf_grounding_node.cpp  crf_node.cpp  crf_phrase_node.cpp  glove_pretrained_loader.cpp  word_to_vector.cpp
src/optimization/: collision_cost.cpp  cost.cpp  dynamic_kf_human_obstacle.cpp  goal_cost.cpp  goal_orientation_cost.cpp  goal_region_cost.cpp  goal_upvector_cost.cpp  grasp_cost.cpp  optimizer.cpp  optimizer_robot.cpp  optimizer_robot_loader.cpp  optimizer_thread.cpp  repulsive_cost.cpp  scene.cpp  smoothness_cost.cpp  trajectory.cpp  trajectory_publisher_thread.cpp  velocity_cost.cpp
src/optimization(old)/: dynamic_kf_human_obstacle.cpp  dynamic_obstacle.cpp  static_obstacle.cpp
src/parsetree/: parsetree_node.cpp  sentence_to_parsetree.cpp
src/renderer/: camera.cpp  color_shader.cpp  entity.cpp  gl_base.cpp  light.cpp  light_oit_shader.cpp  light_shader.cpp  light_shadow_shader.cpp  loader.cpp  material.cpp  model_texture.cpp  normal_shader.cpp  object.cpp  oit_resolve_shader.cpp  raw_model.cpp  renderer.cpp  renderer_interface.cpp  renderer_object.cpp  rendering_box.cpp  rendering_capsule.cpp  rendering_human.cpp  rendering_kinect_human.cpp  rendering_kinect_points.cpp  rendering_mesh.cpp  rendering_mesh_manager.cpp  rendering_plane.cpp  rendering_robot.cpp  rendering_robot_trajectory.cpp  rendering_shape.cpp  resource_manager.cpp  robot_renderer.cpp  shader_program.cpp  shadowmap_point_shader.cpp  shadowmap_shader.cpp  static_shader.cpp  texture.cpp  textured_model.cpp  wireframe_shader.cpp
src/robot/: continuous_joint.cpp  fixed_joint.cpp  joint.cpp  link.cpp  prismatic_joint.cpp  revolute_joint.cpp  robot_model.cpp  robot_state.cpp  urdf_parser.cpp
src/ros/: fetch.cpp  trajectory_executor.cpp
src/shape/: aabb.cpp  capsule.cpp  capsule2.cpp  mesh.cpp  mesh_loader.cpp  obb.cpp  shape.cpp
src/test/: datagen.cpp  test_interface.cpp
src/utils/: conversion.cpp  timing.cpp
vs/: datagen.vcxproj  itomp_nlp.sln  itomp_nlp.vcxproj  itomp_nlp.vcxproj.filters  test_renderer.vcxproj  test_renderer.vcxproj.filters
